feat(cli): initial support for JLine3
- Switch to JLine3 for command input/output
- Add history, highlighting (for JS)
- Add bridge for JUL -> SLF4J
- Add bridge for Logback -> JLine